infrastructure/argo-rollouts/ingress-argo-rollouts.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: argo-rollouts-ingress
  namespace: argo-rollouts
spec:
  ingressClassName: haproxy
  rules:
    - host: rollouts.127.0.0.1.nip.io
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: argo-rollouts-dashboard
                port:
                  number: 3100
